# LifeHelper

./: .gitignore  CMakeLists.txt
Common/: CMakeLists.txt
Common/sources/inc/: OneWayChannel.hpp
Common/sources/inc/communication/: AddressProviders.hpp  ChannelFactory.hpp  CommunicationChannel.hpp  MessageProxy.hpp  MessagesSubscriber.hpp  OneWayChannel.hpp  Proxy.hpp  ProxyCapturer.hpp  Publisher.hpp  ReceivedMessagesProxy.hpp  SignalsFactory.hpp  ZmqFrontendBackendBinder.hpp
Common/sources/inc/communication/messages/: MessageType.hpp  SignalType.hpp  SignalsFactory.hpp  XmlMessageBuilder.hpp
Common/sources/inc/utils/: ToString.hpp  log.hpp
Common/sources/inc/utils/message_builders/: XmlMessageBuilder.hpp
Common/sources/inc/utils/traits/: ToString.hpp  traits.hpp
Common/sources/src/communication/: ChannelFactory.cpp  CommunicationChannel.cpp
Common/sources/src/utils/: ToString.cpp
GodProgram/: .gitignore  CMakeLists.txt
GodProgram/GodProgram/: GodProgram.pro  TabCreators.hpp  main.cpp  mainwindow.cpp  mainwindow.h.autosave  mainwindow.hpp  mainwindow.ui
GodProgram/sources/inc/Communication/: AddressProviders.hpp  Proxy.hpp
GodProgram/sources/inc/Subprograms/: HeartbeatController.hpp  SignalType.hpp  SubprogramInstance.hpp  SubprogramInstanceFactory.hpp  SubprogramInstancesManager.hpp  SubprogramMessagesSubscriber.hpp  SubprogramSignalHandler.hpp  helpers.hpp
GodProgram/sources/inc/Subprograms/Messages/: MessageType.hpp  SubprogramMessage.hpp
GodProgram/sources/inc/Subprograms/Messages/Handlers/: MessageHandler.hpp  Program2MessageHandler.hpp  ProgramMessageHandlerCreator.hpp
GodProgram/sources/inc/Subprograms/Messages/Parsers/: MessageParser.hpp  Program2MessageParser.hpp
GodProgram/sources/inc/Subprograms/Process/: ProcessFactory.hpp
GodProgram/sources/inc/Tabs/: TabCreators.hpp  TabsManager.hpp
GodProgram/sources/src/Tabs/: TabCreators.cpp  TabsManager.cpp
Program1/: CMakeLists.txt
Program1/sources/inc/: ProgramFactory.h  ViewFactory.h
Program1/sources/inc/internals/: ProgramInternals.h
Program1/sources/inc/internals/controller/: P2Controller.h  P2QtController.h
Program1/sources/inc/internals/input/: P2Input.h  P2InputHandler.h  P2InputObserver.h
Program1/sources/inc/internals/model/: P2Model.h  P2ModelObserver.h
Program1/sources/inc/internals/view/: P2ConsoleView.h  P2QtView.h  P2View.h
Program1/sources/inc/internals/view/detail/: P2QtWidgetManager.h
Program1/sources/src/: ProgramFactory.cpp  ViewFactory.cpp  main.cpp
Program1/sources/src/internals/controller/: P2Controller.cpp  P2QtController.cpp
Program1/sources/src/internals/input/: P2Input.cpp  P2InputHandler.cpp  P2InputObserver.cpp
Program1/sources/src/internals/model/: P2Model.cpp  P2ModelObserver.cpp
Program1/sources/src/internals/view/: P2ConsoleView.cpp  P2QtView.cpp  P2View.cpp
Program1/sources/src/internals/view/detail/: P2QtWidgetManager.cpp
Program1/uiforms/: form2.ui
Program2/: CMakeLists.txt
Program2/resources/config/: config.conf
Program2/sources/inc/: ProgramInternalCreators.h  mainwindow.h
Program2/sources/inc/internals/: ProgramInternals.h
Program2/sources/inc/internals/controller/: Controller.h
Program2/sources/inc/internals/view/: QtView.h
Program2/sources/src/: ProgramInternalCreators.cpp  ProgramInternalsCreators.cpp  main.cpp
Program2/sources/src/internals/controller/: Controller.cpp
Program2/sources/src/internals/input/: Input.cpp
Program2/uiforms/: mainwindow.ui
Program2Folder/: CMakeLists.txt  Program2.pro
Program2Folder/doc/messages/from_god/: updateSum.xml
Program2Folder/doc/messages/to_god/: updateSum.xml
Program2Folder/sources/inc/: ProgramInstance.hpp  ProgramInternalsCreators.h  ProgramRemoteInstance.hpp  mainwindow.h
Program2Folder/sources/inc/internals/: ProgramInfo.hpp  ProgramInternals.h
Program2Folder/sources/inc/internals/input/: Input.h  InputObserver.h  P2Input.h  SocketInputObserverReceiver.h  SocketInputObserverSender.hpp
Program2Folder/sources/inc/internals/model/: Model.h  SocketModelObserverReceiver.hpp  SocketModelObserverSender.hpp
Program2Folder/sources/inc/internals/view/: ConsoleView.h  SocketView.hpp
Program2Folder/sources/inc/internals/view/detail/: QtWidgetManager.h
Program2Folder/sources/inc/program2internals/: ProgramInfo.hpp  ProgramInternals.h
Program2Folder/sources/inc/program2internals/communication/: MessageFromGod.hpp  MessageHandler.hpp  MessageParser.hpp  MessageType.hpp
Program2Folder/sources/inc/program2internals/controller/: Controller.h
Program2Folder/sources/inc/program2internals/input/: Input.h  InputHandler.h  InputHandler.hpp  InputPropagator.hpp  SocketInputObserverReceiver.h  SocketInputObserverSender.hpp  SocketInputPropagatorReceiver.hpp  SocketInputPropagatorSender.hpp
Program2Folder/sources/inc/program2internals/model/: Model.h  Model.hpp  ModelObserver.h  ModelObserver.hpp  SocketModel.hpp  SocketModelObserverReceiver.hpp  SocketModelObserverSender.hpp  SocketModelReceiver.hpp  SocketModelSender.hpp
Program2Folder/sources/inc/program2internals/view/: ConsoleView.h  QtView.h  QtView.hpp  SocketView.hpp  View.hpp
Program2Folder/sources/inc/program2internals/view/detail/: QtWidgetManager.h  QtWidgetManager.hpp
Program2Folder/sources/src/: ProgramInternalsCreators.cpp  main.cpp  mainwindow.cpp
Program2Folder/sources/src/internals/model/: Model.cpp
Program2Folder/sources/src/internals/view/detail/: QtWidgetManager.cpp
Program2Folder/sources/src/program2internals/communication/: MessageType.cpp
Program2Folder/sources/src/program2internals/controller/: Controller.cpp
Program2Folder/sources/src/program2internals/input/: Input.cpp
Program2Folder/sources/src/program2internals/model/: Model.cpp
Program2Folder/sources/src/program2internals/view/: ConsoleView.cpp  QtView.cpp  View.cpp
Program2Folder/sources/src/program2internals/view/detail/: QtWidgetManager.cpp
cmake/modules/: FindZMQ.cmake
doc/messages/: hearthbeat.xml
doc/messages/signals/: clean_close.xml  error.xml  hearthbeat.xml
(+4 files in other folders)
